Theme - Region Background Alpha of Video Clip Editor #54942

Closed
opened 2018-05-03 17:09:52 +02:00 by filip mond · 7 comments

System Information
OS X 10.12.6, NVIDIA GeForce GTX 780M 4096 MB

Blender Version
Broken: 2.79a, 2.79daily, 2.8
Worked:

Short description of error
Region Background Alpha is not working

Exact steps for others to reproduce the error
If I move slider of alpha for region background in Video Clip Editor editor, alpha is still 1.
Plus one more issue - changing color of Region Background for "Video Clip Editor" affects BG of "graph view" and "dopesheet" view.
Screen Shot 2018-05-03 at 16.22.37.png

EDIT: Previously I thought any Region BG ignores alpha, than I discovered from Pablo's video - we need to check "Region Overlap" under "System" first.
Is it possible to protect from this scenario? Like popup some warning if user try to change alpha with "Region Overlap" disabled? - Enable "Region Overlap" in "User Preferences > System" tab/panel? Thank you

**System Information** OS X 10.12.6, NVIDIA GeForce GTX 780M 4096 MB **Blender Version** Broken: 2.79a, 2.79daily, 2.8 Worked: **Short description of error** Region Background Alpha is not working **Exact steps for others to reproduce the error** If I move slider of alpha for region background in Video Clip Editor editor, alpha is still 1. Plus one more issue - changing color of Region Background for "Video Clip Editor" affects BG of "graph view" and "dopesheet" view. ![Screen Shot 2018-05-03 at 16.22.37.png](https://archive.blender.org/developer/F3235952/Screen_Shot_2018-05-03_at_16.22.37.png) EDIT: Previously I thought any Region BG ignores alpha, than I discovered from Pablo's video - we need to check "Region Overlap" under "System" first. Is it possible to protect from this scenario? Like popup some warning if user try to change alpha with "Region Overlap" disabled? - Enable "Region Overlap" in "User Preferences > System" tab/panel? Thank you
Author

Added subscriber: @FilipMond

Added subscriber: @FilipMond
filip mond changed title from Theme - Region Background Alpha to Theme - Region Background Alpha of Video Clip Editor 2018-05-03 17:23:15 +02:00
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Philipp Oeser self-assigned this 2018-05-04 13:02:02 +02:00
Member
  • regarding Region Overlap in the MovieClip editor: this is disabled intentionally, quoting @Sergey from cacd7c725b

Disable region overlap in movie clip editor

Before it was giving weird behavior with timeline in MCE
and track preview widgets. But there's also no much benefit
of having transparent toolbox there.

Requested by our motrack guru Sebastian ages ago.

  • regarding the color issue: I think D3200 should fix this

So, first issue mentioned is not a bug, second issue can be 'fixed'

- regarding `Region Overlap` in the MovieClip editor: this is disabled intentionally, quoting @Sergey from cacd7c725b > Disable region overlap in movie clip editor > > Before it was giving weird behavior with timeline in MCE > and track preview widgets. But there's also no much benefit > of having transparent toolbox there. > > Requested by our motrack guru Sebastian ages ago. - regarding the color issue: I think [D3200](https://archive.blender.org/developer/D3200) should fix this So, first issue mentioned is not a bug, second issue can be 'fixed'
Author

1 - Hard to say what "weird behaviour". In terms of consistency it make a more sence to have it here as well. Benefit is the same as in any other editor. What doesn't make a sence is ability to change region background alpha for "File Browser" editor and whole region values for "Timeline" editor - region there doesn't exists so why to give theme controlers? But OK this is probably task for 2.8

2 - Thanks :)

1 - Hard to say what "weird behaviour". In terms of consistency it make a more sence to have it here as well. Benefit is the same as in any other editor. What doesn't make a sence is ability to change region background alpha for "File Browser" editor and whole region values for "Timeline" editor - region there doesn't exists so why to give theme controlers? But OK this is probably task for 2.8 2 - Thanks :)

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

No bug here as far as I can tell, only potential theme UI polishing.

No bug here as far as I can tell, only potential theme UI polishing.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54942
No description provided.