Fix Movieclip editors 'graph' and 'dopesheet' view using themes region background setting

mentioned in T54942

Reviewed By: campbellbarton

Differential Revision: https://developer.blender.org/D3200